<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>martivj</groupId>
    <artifactId>IdiotCardGame</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>IdiotCardGame</name>
    <url>https://github.com/martivj/IdiotCardGame</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>19</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
        </dependency>
    </dependencies>
    <profiles>
        <!-- profile for Linux -->
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <configuration>
                            <icon>src/main/resources/idiot/icons/ace_of_spades_logo.png</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- profile for Windows -->
        <profile>
            <id>windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <configuration>
                            <icon>src/main/resources/idiot/icons/ace_of_spades_logo.ico</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- profile for macOS -->
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <configuration>
                            <icon>src/main/resources/idiot/icons/ace_of_spades_logo.icns</icon>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be
            moved to parent pom) -->
            <plugins>
                <!-- clean lifecycle, see
                https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- default lifecycle, jar packaging: see
                https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>

                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <!-- site lifecycle, see
                https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <!-- JavaFX Maven Plugin -->
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.8</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>run</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <mainClass>idiot.gui.GameApp</mainClass>
                        <!-- rest of options are for jlink -->
                        <compress>2</compress>
                        <noHeaderFiles>true</noHeaderFiles>
                        <stripDebug>true</stripDebug>
                        <noManPages>true</noManPages>
                        <launcher>idiotfx</launcher>
                        <jlinkImageName>idiotfx</jlinkImageName>
                        <jlinkZipName>idiotfx</jlinkZipName>
                    </configuration>
                </plugin>

                <!-- Maven Compiler Plugin -->
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <release>17</release>
                    </configuration>
                </plugin>


                <!-- config above and below taken from
                https://dev.to/cherrychain/javafx-jlink-and-jpackage-h9 -->
                <plugin>
                    <groupId>org.panteleyev</groupId>
                    <artifactId>jpackage-maven-plugin</artifactId>
                    <version>1.4.0</version>
                    <configuration>

                        <!-- General options -->
                        <name>Idiot</name>
                        <appVersion>1.0.0</appVersion>
                        <vendor>martivj</vendor>
                        <destination>target/dist</destination>
                        <module>idiot/idiot.gui.GameApp</module>
                        <runtimeImage>target/idiotfx</runtimeImage>
                        <javaOptions>
                            <option>-Dfile.encoding=UTF-8</option>
                        </javaOptions>
                        <description>Play your favorite card game "Idiot"</description>

                        <!-- linux options -->
                        <linuxShortcut>true</linuxShortcut>
                        <linuxMenuGroup>Idiot</linuxMenuGroup>
                        <linuxPackageName>idiot</linuxPackageName>
                        <linuxAppVersion>1.0.0</linuxAppVersion>

                        <!-- windows options -->
                        <winDirChooser>true</winDirChooser>
                        <winShortcut>true</winShortcut>
                        <winMenu>true</winMenu>
                        <winMenuGroup>Idiot</winMenuGroup>
                        <winPerUserInstall>true</winPerUserInstall>

                        <!-- macOS options -->
                        <macPackageIdentifier>martivj.idiot</macPackageIdentifier>
                        <macPackageName>Idiot</macPackageName>

                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
</project>